[package]
name = "wider_primitives"
description = "Wider primitive integer types"
version = "0.0.5"
edition = "2021"
repository = "https://github.com/Kolsky/wider_primitives"
license = "MIT OR Apache-2.0"

[dependencies]

[build-dependencies]
cfg_aliases = "0.1.1"

[features]
internals-doc-visible = []
unstable = []