[package]
name = "wider_primitives"
description = "Wider primitive integer types"
version = "0.0.6"
edition = "2021"
repository = "https://github.com/Kolsky/wider_primitives"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc"]
features = ["serde"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[build-dependencies]
cfg_aliases = "0.1.1"

[features]
internals-doc-visible = []
unstable = []